Add footer menu

--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -9,3 +9,8 @@
 .dark .fi-sidebar-nav {
     border-right: 1px solid #18181b;
 }
+
+
+.growmax-theme .fi-dropdown-panel {
+    @apply !max-w-[16rem];
+}
